--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Simple Project</title>
     </head>
     <body>
-        <h1 style="color:red;">Світ пончиків</h1>
+        <h1>Світ пончиків</h1>
+        <img src="/uploads/2023/02/donut.png"/>
     </body>
 </html>
